[MOJ-166] fix tbv meerdere competities

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -48,7 +48,7 @@
                 <a class="nav-link" id="pills-sessiebeheer-tab" data-toggle="pill" href="#pills-sessiebeheer" role="tab" aria-controls="pills-sessiebeheer" aria-selected="false">Manage competities</a>
             </li>
             <li class="nav-item adminRole role" th:if="${isWithAdminRole}">
-                <a class="nav-link" id="pills-uitleg-tab" data-toggle="pill" href="#pills-uitleg" role="tab" aria-controls="pills-uitleg" aria-selected="false">Uitleg</a>
+                <a class="nav-link" id="pills-uitleg-tab" data-toggle="pill" href="#pills-uitleg" role="tab" aria-controls="pills-uitleg" aria-selected="false">Uitleg bij bouwen opdrachten</a>
             </li>
 
         </ul>
@@ -136,25 +136,23 @@
 
                 <div class="row">
 
-                        <div class="p-2 col-9">
+                        <div class="p-2 col-9" th:if="${sessions.size()>1}">
                             <form class="form" method="post" th:action="@{/control/select-session}" th:object="${selectSessionForm}">
-                                <label for="sessions" class="inlineBlock">Speelbare sessies: </label>
-                                <select class="form-control inlineBlock maxWidth300 font10px" id="sessions" onchange="$('#loadSession').removeClass('hide')" th:field="*{session}">
-                                    <option th:each="s : ${sessions}" th:value="${s.uuid}" th:text="${'Session '+(sStat.index +1)+ ' (' + s.getCompetition().getName()+ ')'}">
-                                    </option>
-                                </select>
-
-                                <button type="submit" name="load" id="loadSession" class="hide btn btn-primary inlineBlock">Selecteer</button>
+                                <div >
+                                    <label for="sessions" class="inlineBlock">Speelbare sessies: </label>
+                                    <select class="form-control inlineBlock maxWidth300 font10px" id="sessions" onchange="$('#loadSession').removeClass('hide')" th:field="*{session}">
+                                        <option th:each="s : ${sessions}" th:value="${s.uuid}" th:text="${'Session '+(sStat.index +1)+ ' (' + s.getCompetition().getName()+ ')'}">
+                                        </option>
+                                    </select>
+                                </div>
                             </form>
                         </div>
 
-                    <div class="p-2 col-2 hide" >
+                    <div class="p-2 col-2" >
                         <form class="form" id="createNewSessionForm" method="post" th:action="@{/control/new-session}">
-                            <button type="submit" name="create" class="btn btn-secondary"  >Nieuwe sessie</button>
                         </form>
                     </div>
                 </div>
-                <br/>
                 <div class="p-2 col-12">
                     <div th:remove="tag" th:utext="${sessionDetailCanvas}"></div>
                 </div>
@@ -267,7 +265,7 @@
                     <br>
                 </div>
                 <div class="tab-pane fade show active" id="pills-toptien" role="tabpanel" aria-labelledby="pills-toptien-tab">
-                    <h6>Bekijk hier de beste teams tot dusver</h6>
+                    <h6>Bekijk hier de beste teams tot dusver [[${selectedYearLabel}]]</h6>
                     <br>
                     <div class="row">
                         <div class="p-2 col-6">
