--- a/src/main/resources/templates/fragments/authortips.html
+++ b/src/main/resources/templates/fragments/authortips.html
@@ -11,16 +11,16 @@
     - een indeling geven van de bonus per individuele test.
 
 ## Review vragen:
-    - is de opdracht omvangrijk genoeg qua software project? (voldoende tests, voldoende sources)
-    - heeft de opdracht voldoende humoristische toevoegingen? Op vele plekken mag een grap staan.
-    - kan worden uitgesloten dat de opdracht kan worden opgezocht op Google?
-    - is de opdracht helder voor de Gamemaster, staat dit in een NL-talige readme.md bij de opdracht.
-    - in de readme.md staan bij de opdracht staan nog verdere uitbreidingsmogelijkheden. zijn die nog nodig?
-    - is erg een duidelijk onderscheid tussen de solution en probleem van de opdracht?
-    - zijn voldoende moderne Java features toegevoegd? Bijv. extra Java 14 features zorgt voor extra inhoud.
-    - is het duidelijk dat opdrachten voldoende scoren op basis van fun, quality en difficulty
-    - zijn de teksten netjes geschreven en zonder typos?
-    - is de solution volledig voorzien van comments (leesbaar voor de gamemaster)?
+    1. is de opdracht omvangrijk genoeg qua software project? (voldoende tests, voldoende sources)
+    2. heeft de opdracht voldoende humoristische toevoegingen? Op vele plekken mag een grap staan.
+    3. kan worden uitgesloten dat de opdracht kan worden opgezocht op Google?
+    4. is de opdracht helder voor de Gamemaster, staat alles om te weten helder in een NL-talige readme.md bij de opdracht?
+    5. in de readme.md bij de opdracht staan nog verdere uitbreidingsmogelijkheden. zijn die nog nodig?
+    6. is een duidelijk onderscheid tussen de solution en probleem van de opdracht?
+    7. zijn er voldoende moderne Java features toegevoegd? Bijv. extra Java 14 features zorgt voor extra inhoud.
+    8. is het duidelijk dat opdrachten voldoende scoren op basis van fun, quality en difficulty?
+    9. zijn de teksten netjes geschreven en zonder typos?
+    10. is de solution volledig voorzien van comments (leesbaar voor de gamemaster)?
 
 ## Overig:
     - emoticons en icons kun je toevoegen via Unicode, zoals deze 🏠 (&#8962 heeft code 8962) of via <i class="fas fa-apple-alt"></i> font-awesome.
