--- a/src/main/resources/templates/fragments/authortips.html
+++ b/src/main/resources/templates/fragments/authortips.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<div th:fragment="authortips" style="white-space: pre">
+<div th:fragment="authortips" class="pre_wrap">
 ## Gebruik de application.yml van de opdracht:
     1. Voeg labels toe. Indien geen labels, dan staan de opdrachten op status 'not-ready'.
     2. Met labels kun je opdrachten:
