MOJ-165: fixing bootstrap

--- a/src/main/resources/templates/bootstrap.html
+++ b/src/main/resources/templates/bootstrap.html
@@ -39,8 +39,7 @@
     </div>
     <div class="row mt-5">
         <div class="col text-center">
-            <p>Initialization is needed before the Masters of Java competition software can be used. Please
-                configure a administrator username and password.
+            <p>Initialization is needed before the Masters of Java competition software can be used.
             </p>
         </div>
     </div>
@@ -52,21 +51,6 @@
     <div class="row justify-content-center">
         <div class="login-container">
             <form method="post" th:action="@{/bootstrap}" th:object="${form}">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="">
-                    <small id="usernameHelp" class="form-text text-muted">The username for the administrator.</small>
-                </div>
-                <div class="form-group">
-                    <label for="password1">Password</label>
-                    <input type="password" class="form-control" id="password1" name="password1" placeholder="">
-                    <small id="password1Help" class="form-text text-muted">The password for the administrator.</small>
-                </div>
-                <div class="form-group">
-                    <label for="password2">Repeat Password</label>
-                    <input type="password" class="form-control" id="password2" name="password2" placeholder="">
-                    <small id="password2Help" class="form-text text-muted">The password repeated.</small>
-                </div>
                 <div class="d-flex flex-row-reverse">
                     <button type="submit" id="bootstrap" class="btn btn-primary ml-2">Bootstrap</button>
                 </div>
