--- a/src/main/resources/templates/fragments/authortips.html
+++ b/src/main/resources/templates/fragments/authortips.html
@@ -6,7 +6,7 @@
 <div th:fragment="authortips" class="pre_wrap">
 ## Gebruik de application.yml van de opdracht:
     1. Voeg labels toe. Indien geen labels, dan staan de opdrachten op status 'not-ready'.
-    2. Met labels kun je opdrachten:
+    2. Met labels kunt u opdrachten:
     - een rating geven op basis van fun, quality en difficulty.
     - een indeling geven van de bonus per individuele test.
 
