MOJ-165: fixing disconnect

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -184,7 +184,7 @@
         </div>
         <div class="ml-auto pr-2 align-self-center" id="status"></div>
         <div class="pr-2 align-self-center">
-            <a th:href="@{/logout}" class="btn btn-danger">Disconnect</a>
+            <a th:href="@{/sso/logout}" class="btn btn-danger">Disconnect</a>
         </div>
     </div>
 </div>
