[onderhoud] statische assignment code wordt gecached, deze kleine cache wordt nu automatisch gereset bij herladen van de assignments (want mogelijk/vaak is de code van de opdracht ook gewijzigd). dit werkt handig bij het editen van opdrachten (nu hoef je niet meer telkens de server te herstarten)

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -61,7 +61,7 @@
                 <br/>
             </div>
             <div class="tab-pane fade" id="pills-wedstrijdverloop" role="tabpanel" aria-labelledby="pills-wedstrijdverloop-tab">
-                <h6>De uitslag van elke opdracht [[${selectedYearLabel}]]. <span th:if="${isWithAssignmentsLoaded}" class="adminRole role">Als admin kunt u hier ook de oplossingen inzien.</span></h6>
+                <h6>De uitslag van elke opdracht [[${selectedYearLabel}]]. <span th:if="${isWithAssignmentsLoaded}" class="adminRole role">Als admin kunt u ook de oplossingen inzien (click hiervoor op het opdrachtnummer).</span></h6>
 
                 <div th:remove="tag" th:utext="${gameDetailCanvas}"></div>
             </div>
