[onderhoud] betere teksten

--- a/src/main/resources/templates/fragments/authortips.html
+++ b/src/main/resources/templates/fragments/authortips.html
@@ -4,25 +4,25 @@
 </head>
 <body>
 <div th:fragment="authortips" class="pre_wrap">
-## Gebruik de application.yml van de opdracht:
+<b>Gebruik de 'application.yml' van de opdracht</b>
     1. Voeg labels toe. Indien geen labels, dan staan de opdrachten op status 'not-ready'.
     2. Met labels kunt u opdrachten:
     - een rating geven op basis van fun, quality en difficulty.
     - een indeling geven van de bonus per individuele test.
 
-## Review vragen:
+<b>Review vragen tbv NK programmeren</b>
     1. is de opdracht omvangrijk genoeg qua software project? (voldoende tests, voldoende sources)
     2. heeft de opdracht voldoende humoristische toevoegingen? Op vele plekken mag een grap staan.
     3. kan worden uitgesloten dat de opdracht kan worden opgezocht op Google?
     4. is de opdracht helder voor de Gamemaster, staat alles om te weten helder in een NL-talige readme.md bij de opdracht?
-    5. in de readme.md bij de opdracht staan nog verdere uitbreidingsmogelijkheden. zijn die nog nodig?
+    5. in de readme.md bij de opdracht staan vaak nog verdere uitbreidingsmogelijkheden. zijn die nog nodig?
     6. is een duidelijk onderscheid tussen de solution en probleem van de opdracht?
     7. zijn er voldoende moderne Java features toegevoegd? Bijv. extra Java 14 features zorgt voor extra inhoud.
     8. is het duidelijk dat opdrachten voldoende scoren op basis van fun, quality en difficulty?
     9. zijn de teksten netjes geschreven en zonder typos?
     10. is de solution volledig voorzien van comments (leesbaar voor de gamemaster)?
 
-## Overig:
+<b>Overig:</b>
     - emoticons en icons kun je toevoegen via Unicode, zoals deze 🏠 (&#8962 heeft code 8962) of via <i class="fas fa-apple-alt"></i> font-awesome.
 
 
