--- a/src/main/resources/static/css/control.css
+++ b/src/main/resources/static/css/control.css
@@ -151,7 +151,7 @@ select.disabled {
     display: block;
     overflow-x: hidden;
 }
-.underline {
+tr.underline td{
     text-decoration: underline;
 }
 .selected .fa-angle-double-right:before {
@@ -168,4 +168,17 @@ input[file] {
 }
 .pre_wrap {
     white-space: pre-wrap;
+}
+.btn-group-toggle label.btn.btn-secondary.active{
+    cursor: default;
+    font-weight: bold;
+}
+.btn-group-toggle label.btn.btn-secondary:not(.active):hover{
+    color: yellow;
+}
+.btn-group-toggle label.btn.btn-secondary:not(.active){
+    background-color: lightgrey;
+}
+.underline .notextdecoration {
+    text-decoration: none;
 }
