--- a/src/main/resources/templates/testfeedback.html
+++ b/src/main/resources/templates/testfeedback.html
@@ -121,6 +121,16 @@
             <img th:src="@{/images/logo_first8_150x39.png}" class="img-fluid"
                  src="/static/images/logo_first8_150x39.png"/>
         </div>
+        <div class="p-2 text-center inlineBlock minWidth100">
+            <a class="btn btn-info text-white disabled"
+               th:href="@{/feedback}"
+               target="_blank"><span class="fa fa-gamepad pr-1"></span>Live Feedback</a>
+        </div>
+        <div class="p-2 text-center inlineBlock minWidth100">
+            <a class="btn btn-info text-white"
+               th:href="@{/rankings}"
+               target="_blank"><span class="fa fa-trophy pr-1"></span>Rankings</a>
+        </div>
     </div>
 </div>
 
