--- a/src/main/resources/templates/rankings.html
+++ b/src/main/resources/templates/rankings.html
@@ -56,7 +56,7 @@
                          src="/static/images/moj_logo.png"/>
                 </div>
                 <div class="pl-5 align-self-center">
-                    <h1>Ranking</h1>
+                    <h1>Ranking - <i>[[${competitionName}]]</i></h1>
                 </div>
             </div>
             <div class="row mt-3">
@@ -198,6 +198,16 @@
         <div class="mr-auto p-2">
             <img th:src="@{/images/logo_first8_150x39.png}" class="img-fluid"
                  src="/static/images/logo_first8_150x39.png"/>
+        </div>
+        <div class="p-2 text-center inlineBlock minWidth100">
+            <a class="btn btn-info text-white "
+               th:href="@{/feedback}"
+               target="_blank"><span class="fa fa-gamepad pr-1"></span>Live Feedback</a>
+        </div>
+        <div class="p-2 text-center inlineBlock minWidth100">
+            <a class="btn btn-info text-white disabled"
+               th:href="@{/rankings}"
+               target="_blank"><span class="fa fa-trophy pr-1"></span>Rankings</a>
         </div>
     </div>
 </div>
